--- a/.github/workflows/jupytext-synch.yml
+++ b/.github/workflows/jupytext-synch.yml
@@ -36,4 +36,5 @@ jobs:
     # Synch Jupytext files
     - name: jupytext sync
       run: |
+        jupytext --set-formats .md///md,ipynb notebooks/.md/*
         jupytext --synch notebooks/*
