--- a/.github/workflows/jupytext-synch.yml
+++ b/.github/workflows/jupytext-synch.yml
@@ -37,4 +37,4 @@ jobs:
     - name: jupytext sync
       run: |
         jupytext --set-formats .md///md,ipynb notebooks/.md/*
-        jupytext --synch notebooks/*
+        jupytext --sync notebooks/*
