--- a/.github/workflows/jupytext-synch.yml
+++ b/.github/workflows/jupytext-synch.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'notebooks/**'
+      paths:
+        - 'notebooks/**'
   workflow_dispatch:
     inputs:
       logLevel:
@@ -36,5 +36,10 @@ jobs:
     # Synch Jupytext files
     - name: jupytext sync
       run: |
-        jupytext --set-formats .md///md,ipynb notebooks/.md/*
-        jupytext --sync notebooks/*
+        jupytext --set-formats ipynb,.md//md notebooks/*.ipynb
+        jupytext --sync notebooks/*.ipynb
+        jupytext --sync notebooks/*/.md/*.md
+
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Apply jupytext synch
