--- a/.github/workflows/jupytext-synch.yml
+++ b/.github/workflows/jupytext-synch.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         jupytext --set-formats ipynb,.md//md notebooks/*.ipynb
         jupytext --sync notebooks/*.ipynb
-        jupytext --sync notebooks/*/.md/*.md
+        jupytext --sync notebooks/.md/*.md
 
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
